note list preview wrapping, fix text overflow, list scrollbar

--- a/study49-notes-app/style.css
+++ b/study49-notes-app/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: darkslategray;
+    background-color: rgb(34, 34, 34);
+    
 }
 
 .container{
@@ -9,19 +10,33 @@ body {
 }
 
 ul {
+    max-height: 740px;
+    overflow: scroll;
     margin: 0;
+    margin-right: 12px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 li {
-    padding: 8px;
+    width: 260px;
+    height: 78px;
+    padding: 16px;
     margin: 10px 10px;
     list-style: none;
-    background-color:darkolivegreen;
+    background-color: transparent;
+    font-size: 14px;
+    font-family: 'Roboto', serif;
+    color: white;
+    border: solid 1px rgb(211, 211, 211);
+    border-radius: 6px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 li:hover {
+    transition-duration: .4s;
     cursor: pointer;
-    outline: 1px solid beige;
+    outline: solid 1px rgb(211, 211, 211);
 }
 
 .main-content {
@@ -46,4 +61,5 @@ textarea {
 
 .main-para{
     width: 550px;
+    color: white;
 }
